# posterly

./: .gitignore  NOTICE.md  README.md  SKILL.md  pyproject.toml
examples/hello_world/: poster.html
examples/optail_neurips2024/: poster.html
templates/: COMPONENTS.md  README.md  landscape_4col_neutral.html  landscape_hero_neutral.html  portrait_2col_neutral.html
tests/: conftest.py  test_canvas.py  test_card_trailing_integration.py  test_fig_optout_integration.py  test_flexbr_integration.py  test_help_ascii.py  test_inner_void_integration.py  test_logbook_embed_fallback.py  test_logo_integration.py  test_measure_adjustments.py  test_nav_timeout.py  test_orphan_glyphs.py  test_polish.py  test_polish_output.py  test_preflight.py  test_preflight_nesting.py  test_render_logbook_embed.py  test_run_gates_strict_polish.py  test_template_contrast.py  test_verify_final.py  test_widow_integration.py  test_width_class_preflight.py
tools/: asset_check.py  extract_pdf_figures.py  poster_check.py  preprocess_figures.py  render_logbook_embed.py  render_preview.py  run_gates.py  style_check.py
tools/_posterly/: canvas.py  measure.py  polish.py  preflight.py  render.py  verify_final.py
