[project]
name = "posterly"
version = "0.1.0"
description = "Build academic conference posters as a single HTML/CSS file, rendered to print-ready PDF via headless Chromium. A Claude Code skill — not a hosted service, no signup."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ruishuo Chen", email = "crs25@mails.tsinghua.edu.cn" }]
requires-python = ">=3.10"
keywords = ["poster", "academic", "conference", "claude-code", "skill", "html", "css", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.urls]
# TODO: replace <your-github> with the actual GitHub user/org after `gh repo create`.
Homepage = "https://github.com/<your-github>/posterly"
Issues   = "https://github.com/<your-github>/posterly/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Skill ships HTML templates + Python tools; nothing here is meant to be
# imported as a library by other projects (yet). We deliberately do NOT
# declare packages so `pip install .` is a no-op for now — install
# Playwright via requirements + use the skill from ~/.claude/skills/posterly/.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools"]
